Import of DOY/Package-Stash-0.05 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DOY/Package-Stash-0.05.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,14 +1,21 @@
-Revision history for Package::Stash
+Revision history for Package-Stash
 
-0.04    2010-06-13
-    get_package_symbol now doesn't autovivify stash entries. A new method
-    get_or_add_package_symbol can now be used for that behavior.
+0.05  2010-06-15
+      - bump Test::More requirement for done_testing
 
-0.03    2010-05-14
-    Rename from Stash::Manip to Package::Stash
+      - update packaging stuff
 
-0.02    2010-05-13
-    Need to dep on Test::Exception
+0.04  2010-06-13
+      - get_package_symbol now doesn't autovivify stash entries. A new method
+        get_or_add_package_symbol can now be used for that behavior.
 
-0.01    2010-05-12
-    Initial release
+      - Update %DB::sub on add_package_symbol (Tim Bunce).
+
+0.03  2010-05-14
+      - Rename from Stash::Manip to Package::Stash
+
+0.02  2010-05-13
+      - Need to dep on Test::Exception
+
+0.01  2010-05-12
+      - Initial release
