--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Package-Stash
 
+0.06  2010-08-26
+      - re-enable the caching of the stash, since I can't reproduce the bug
+        at all
+
 0.05  2010-06-15
       - bump Test::More requirement for done_testing
 
