Import of DOY/Package-Stash-0.08 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.08
gitpan-cpan-path:         DOY/Package-Stash-0.08.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Package-Stash
 
+0.08  2010-09-18
+      - oops, accidentally included some experimental changes in that last
+        release, that break things
+
 0.07  2010-09-18
       - non-dev release
 
