Import of DOY/Package-Stash-0.10-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.10-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.10-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.10  2010-10-27
+      - only do the weird ISA special-casing on perl versions where it's broken
+
 0.09  2010-10-27
       - clean up the vivication code a lot, make it behave more sanely
       - use Test::Fatal instead of Test::Exception (Justin Hunter)
