Import of DOY/Package-Stash-0.11-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.11-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.11-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.11  2010-10-27
+      - conflict on mx-role-withoverloading too
+
 0.10  2010-10-27
       - only do the weird ISA special-casing on perl versions where it's broken
 
