Import of DOY/Package-Stash-0.14-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.14-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.14-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Package-Stash
 
+0.14  2010-11-14
+      - complete rewrite in C, for speed (this includes the vivification
+        changes from earlier). should be entirely backwards compatible
+        otherwise (in terms of documented api anyway).
+
 0.13  2010-10-31
       - revert the vivification changes for now, to get an actual release out
         with Test::Fatal
