--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Package-Stash
 
-0.14  2010-11-14
+0.15  2010-11-16
+      - split the XS conversion out to its own dist (Package-Stash-XS), and
+        convert Package::Stash into a module which loads either the XS or pure
+        perl implementation, depending on what's available
+
+0.14-TRIAL  2010-11-14
       - complete rewrite in C, for speed (this includes the vivification
         changes from earlier). should be entirely backwards compatible
         otherwise (in terms of documented api anyway).
