Import of DOY/Package-Stash-0.17-TRIAL from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.17-TRIAL
gitpan-cpan-path:         DOY/Package-Stash-0.17-TRIAL.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Package-Stash
 
+0.17  2011-01-03
+      - use Dist::Zilla::Plugin::Conflicts rather than doing it by hand
+      - silence deprecation warnings for the method renaming for now
+
 0.16  2010-12-31
       - use Dist::CheckConflicts
 
