--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Package-Stash
 
+0.19  2011-01-03
+      - stop manually inserting conflict checking into Makefile.PL since we're
+        using the dzil Conflicts plugin now
+
 0.18  2011-01-03
       - non-trial release
 
