--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.20  2011-01-03
+      - one more fix for the Conflicts plugin
+
 0.19  2011-01-03
       - stop manually inserting conflict checking into Makefile.PL since we're
         using the dzil Conflicts plugin now
