--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.22  2011-01-05
+      - bump ::XS dep again
+
 0.21  2011-01-05
       - bump Package::Stash::XS dep, since a bug was fixed there
 
