--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Package-Stash
 
+0.23  2011-01-11
+      - lower perl prereq to 5.8.1 (ribasushi)
+      - make the leak tests release-only, since they keep randomly failing on
+        platforms i don't have access to. people are encouraged to submit
+        patches for these if they are affected.
+
 0.22  2011-01-05
       - bump ::XS dep again
 
