--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.25  2011-01-25
+      - make the leak tests author-only, since some smokers run release tests
+
 0.24  2011-01-17
       - oops, i did need the Test::Requires dep
 
