Import of DOY/Package-Stash-0.28 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.28
gitpan-cpan-path:         DOY/Package-Stash-0.28.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.28  2011-03-29
+      - META.json fixes (mst)
+
 0.27  2011-03-27
       - also skip the package-stash-conflicts script (Father Chrysostomos)
 
