--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.29  2011-04-06
+      - no, *really* skip the package-stash-conflict script
+
 0.28  2011-03-29
       - META.json fixes (mst)
 
