Import of DOY/Package-Stash-0.30 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.30
gitpan-cpan-path:         DOY/Package-Stash-0.30.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.30  2011-07-21
+      - fix compiler detection in Makefile.PL (ribasushi)
+
 0.29  2011-04-06
       - no, *really* skip the package-stash-conflict script
 
