--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Package-Stash
 
+0.32  2011-09-05
+      - bring the behavior of has_symbol for nonexistant scalars into line with
+        the xs version
+      - invalid package names (for instance, Foo:Bar) are not allowed
+      - invalid stash entry names (anything containing ::) are not allowed
+
 0.31  2011-08-08
       - fix ->add_symbol('$foo', qr/sdlfk/) on 5.12+
       - fix ->add_symbol('$foo', \v1.2.3) on 5.10+
