--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.33  2011-09-28
+      - add conflict on MooseX::Method::Signatures 0.36 (ether)
+
 0.32  2011-09-05
       - bring the behavior of has_symbol for nonexistant scalars into line with
         the xs version
