--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Package-Stash
 
+0.34  2013-01-04
+      - support anonymous stashes on newer perl versions
+      - prevent harmful effects from invalid settings for
+        $ENV{PACKAGE_STASH_IMPLEMENTATION}
+      - switch to Module::Implementation
+
 0.33  2011-09-28
       - add conflict on MooseX::Method::Signatures 0.36 (ether)
 
