Import of DOY/Package-Stash-0.35 from CPAN.
gitpan-cpan-distribution: Package-Stash
gitpan-cpan-version:      0.35
gitpan-cpan-path:         DOY/Package-Stash-0.35.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.35  2013-07-09
+      - remove old deprecated api
+
 0.34  2013-01-04
       - support anonymous stashes on newer perl versions
       - prevent harmful effects from invalid settings for
