--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.36  2013-09-03
+      - support building with PUREPERL_ONLY
+
 0.35  2013-07-09
       - remove old deprecated api
 
