--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Package-Stash
 
+0.37  2014-09-21
+      - fix spurious warning in taint mode (Niko Tyni, #12)
+
 0.36  2013-09-03
       - support building with PUREPERL_ONLY
 
